--- a/Assets/style.css
+++ b/Assets/style.css
@@ -8,9 +8,21 @@ body {
     background-color:white
 }
 
-header {
-    width: 300px;
+.header {
+    padding: 0px;
+    background-color:lightgray
+}
+
+
+.header {
+    width: 1920px;
+    height: 0px;
     border: 15px gray;
     padding: 50px;
-    margin: 20px;
+    margin: 0px;
 }
+
+.header button {
+  float: left
+}
+    
