--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,7 +1,6 @@
 * {
     box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+   
 }
 
 body {
@@ -9,14 +8,13 @@ body {
 }
 
 .header {
-    padding: 0px;
-    background-color:lightgray
+    padding: -10px;
+    background-color:gray
 }
-
 
 .header {
     width: 1920px;
-    height: 0px;
+    height: 10px;
     border: 15px gray;
     padding: 50px;
     margin: 0px;
@@ -26,4 +24,23 @@ body {
   float: left
   
 }
-    
+
+nav {
+    display: flex;
+    padding: 70px 40px;
+    background-color: lightgray;
+}
+
+aside {
+    display: flex;
+    background-color: whitesmoke;
+    float: right;
+
+}
+
+main{
+    flex:70%;
+    background-color: #D8e0f2 ;
+
+
+} 
