--- a/Assets/style.css
+++ b/Assets/style.css
@@ -13,13 +13,17 @@ body {
 }
 
 .header {
-    width: 1920px;
-    height: 90px;
+    width: 100%;
+    height: 74px;
     border: 0px gray;
     padding: 30px;
     margin: 0px;
     text-align: left;
     display: inline-block;
+}
+
+header h1{
+    font-size: xx-large;
 }
 
 .subtitles {
