--- a/Assets/style.css
+++ b/Assets/style.css
@@ -48,6 +48,7 @@ header h1{
 nav {
     display: block;
     padding: 0px;
+    border-radius: 20px;
     background-color: lightgray;
     height: 200px
 }
@@ -76,6 +77,7 @@ aside {
     float: right ;
     height: 800px ;
     width: 30%;
+    border-radius: 20px;
     padding: 20px;
     background-color: whitesmoke;
 }
@@ -89,6 +91,7 @@ section {
 background-color: #b2c0d6;
 height: 800px;
 width: 1290px;
+border-radius: 20px;
 margin-top: 20px;
 margin-left: 20px;
 margin-bottom: px;
