--- a/Assets/style.css
+++ b/Assets/style.css
@@ -13,24 +13,32 @@ body {
 }
 
 .header {
-    width: 1920px;
-    height: 10px;
-    border: 15px gray;
-    padding: 50px;
+    width: 100%;
+    height: 74px;
+    border: 0px gray;
+    padding: 30px;
     margin: 0px;
-    text-align: center;
+    text-align: left;
     display: inline-block;
 }
 
-.subtitles {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
+header h1{
+    font-size: xx-large;
 }
 
-h3 {
-    margin: 0;
+.subtitles {
+    justify-content: space-between;
+    padding: 30px;
 }
+
+.books {
+    display: block;
+    position: relative;
+    left: 40%;
+    bottom: 115px;
+    
+}
+
 
 .header button {
   float: left
@@ -39,31 +47,70 @@ h3 {
     
 nav {
     display: block;
-    padding: 10px 40px;
+    padding: 0px;
+    border-radius: 20px;
     background-color: lightgray;
+    height: 200px
 }
 
-    
+nav h2{
+    font-size: 60px;
+
+}
+
+nav h3{
+    display: inline-block;
+    padding: 00px;
+    margin-right: 400px;
+    font-size: 50px;
+
+}
+nav h4{
+    display: inline-block;
+    padding: 00px;
+    font-size:30px;
+
+}
+
+
 aside {
     float: right ;
     height: 800px ;
     width: 30%;
+    border-radius: 20px;
     padding: 20px;
     background-color: whitesmoke;
 }
 
+
+aside button {
+    float: right;
+}
+
 section {
-background-color: #b2c0d6;
-height: 800px ;
-width: 70% ;
-display: inline-block
+    background-color: #b2c0d6;
+    height: 800px;
+    width: 1290px;
+    border-radius: 20px;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-bottom: px;
+    margin-right: 20px;
+    display: block
 } 
+
 
 #txtbox {
     font-size: 18pt;
     height: 42px;
     width: 100px
 }
+
+textarea{
+    width: 376px;
+}
+
+
 #notes{
     display: inline-block;
     min-height: 100px;
@@ -89,4 +136,3 @@ display: inline-block
     padding: 8px 12px;
     height: 40px;
 }
-
