--- a/Assets/style.css
+++ b/Assets/style.css
@@ -46,7 +46,9 @@ header h1{
 
 
 .header button {
-  float: left
+  float: left;
+  background-color: gray;
+  border-color: gray;
   
 }
     
@@ -61,6 +63,7 @@ nav {
 
 nav h2{
     font-size: 60px;
+    color:#383838
 
 }
 
@@ -69,13 +72,14 @@ nav h3{
     padding: 00px;
     margin-right: 400px;
     font-size: 50px;
+    color:#383838;
 
 }
 nav h4{
     display: inline-block;
     padding: 00px;
     font-size:30px;
-
+    color:#383838;
 }
 
 
@@ -93,6 +97,10 @@ aside button {
     float: right;
 }
 
+aside h2 {
+    color:#383838;
+}
+
 section {
 background-color: #ab8f76;
 height: 800px;
@@ -105,6 +113,9 @@ margin-right: 20px;
 display: block
 } 
 
+section h3 {
+    color:#383838
+}
 
 #txtbox {
     font-size: 18pt;
