--- a/Assets/style.css
+++ b/Assets/style.css
@@ -31,7 +31,7 @@ header h1{
     color:#bbbbbb;
 }
 
-header button {
+.header button {
   background-color:grey;
   border:none;
   position:relative;
