--- a/Assets/style.css
+++ b/Assets/style.css
@@ -31,7 +31,7 @@ header h1{
     color:#bbbbbb;
 }
 
-header button {
+.header button {
   background-color:grey;
   border:none;
   position:relative;
@@ -134,10 +134,10 @@ aside h2{
     color:#383838;
 }
 
-section {
+.section {
     background-color: #ab8f76;
-    height: 800px;
     width: 1290px;
+    height:800px;
     border-radius: 20px;
     margin-top: 20px;
     margin-left: 20px;
